# cliprunner

./: .gitignore  CMakeLists.txt  cliprunner.cpp  cliprunner.desktop  cliprunner.h
debian/: README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  plasma-runner-cliprunner.cron.d.ex  plasma-runner-cliprunner.default.ex  plasma-runner-cliprunner.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
